--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -3,63 +3,63 @@
 en:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "Great! Your Echosight email address has been successfully confirmed."
+      send_instructions: "Check your inbox! You'll receive an Echosight email with confirmation instructions shortly."
+      send_paranoid_instructions: "If your email is registered with Echosight, you'll get an email with confirmation instructions soon."
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      already_authenticated: "You're already logged in to Echosight."
+      inactive: "Your Echosight account isn't activated yet. Please check your email."
+      invalid: "Oops! Invalid login details. Please try again."
+      locked: "Your Echosight account is locked. Please check your email for further instructions."
+      last_attempt: "Attention: You have one more attempt before your Echosight account gets locked."
+      not_found_in_database: "Oops! Invalid login details. Please try again."
+      timeout: "Session timed out. Please log in again to continue with Echosight."
+      unauthenticated: "Please log in or sign up to continue with Echosight."
+      unconfirmed: "First, confirm your Echosight email address to continue."
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "Echosight Confirmation Instructions"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Echosight Password Reset Instructions"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "Echosight Account Unlock Instructions"
       email_changed:
-        subject: "Email Changed"
+        subject: "Echosight Email Address Updated"
       password_change:
-        subject: "Password Changed"
+        subject: "Echosight Password Updated"
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "Couldn't log you in with %{kind}. Error: \"%{reason}\"."
+      success: "Logged in successfully with your %{kind} account at Echosight."
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Your password has been changed successfully."
+      no_token: "Access denied. Please use the link sent to your email for password reset."
+      send_instructions: "Password reset instructions will be sent to your email shortly."
+      send_paranoid_instructions: "If your email is in our system, you'll get a password reset link soon."
+      updated: "Your password is updated! You're now logged in to Echosight."
+      updated_not_active: "Your password has been updated successfully."
     registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirmation link to confirm your new email address."
-      updated: "Your account has been updated successfully."
-      updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again."
+      destroyed: "Your Echosight account has been cancelled. We hope to see you back soon!"
+      signed_up: "Welcome to Echosight! You've signed up successfully."
+      signed_up_but_inactive: "You've signed up successfully with Echosight, but your account is not yet active."
+      signed_up_but_locked: "You've signed up successfully with Echosight, but your account is locked."
+      signed_up_but_unconfirmed: "Check your email for an Echosight confirmation link to activate your account."
+      update_needs_confirmation: "Account updated! We've sent a confirmation email to your new address."
+      updated: "Your Echosight account is updated successfully."
+      updated_but_not_signed_in: "Account updated! Please log in again as your password has changed."
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
+      signed_in: "Welcome back! You're signed in to Echosight."
+      signed_out: "You're now signed out of Echosight."
+      already_signed_out: "You're already signed out of Echosight."
     unlocks:
-      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      send_instructions: "Unlock instructions for your Echosight account will be emailed to you soon."
+      send_paranoid_instructions: "If your account exists, you'll get an email with unlock instructions soon."
+      unlocked: "Your Echosight account is unlocked. Please log in to continue."
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      already_confirmed: "was already confirmed. Please log in to Echosight."
+      confirmation_period_expired: "needs to be confirmed within %{period}. Please request a new confirmation."
+      expired: "has expired. Please request a new one."
+      not_found: "not found in Echosight's system."
+      not_locked: "was not locked."
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "1 error prevented this %{resource} from being saved:"
+        other: "%{count} errors prevented this %{resource} from being saved:"
