--- a/config/locales/devise_invitable.en.yml
+++ b/config/locales/devise_invitable.en.yml
@@ -16,13 +16,8 @@ en:
         header: "Set your password"
         submit_button: "Set my password"
     mailer:
-      # invitation_instructions:
-      #   subject: "You're Invited! Join Echosight Now with an Exclusive Offer"
-      #   hello: "Hello %{email}"
-      #   someone_invited_you: "Someone has invited you to %{url}, you can accept it through the link below."
-      #   accept: "Accept invitation"
-      #   accept_until: "This invitation will be due in %{due_date}."
-      #   ignore: "If you don't want to accept the invitation, please ignore this email. Your account won't be created until you access the link above and set your password."
+      invitation_instructions:
+        subject: "You're Invited! Join Echosight Now with an Exclusive Offer"
   time:
     formats:
       devise:
